Manejo de JWT
+Endpoint para validar un token
+Endpoint para refrescar token expirado
-Pequeños emprolijamientos